--- a/css/style.css
+++ b/css/style.css
@@ -113,15 +113,25 @@
 }
 
 
+/* MAIN */
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
-/* FIRST PAGE */
-.container-first-page{
-    width: 1200px;
+
+/* FIRST part */
+.container-first-part{
+    width: 100%;
     margin: 120px auto;
     /* border: 1px solid black; */
 }
 
-.checkbox-first-page{
+.header-first-part{
+    margin-left: 15px;
+}
+
+.radio-first-part{
     margin-right: 50px;
 }
 
@@ -129,7 +139,7 @@ li{
     list-style: none;
 }
 
-.float-first-page{
+.float-first-part{
     width: calc((100% / 3) - 30px);
     border: 1px solid lightgrey;
     line-height: 25px;
@@ -142,7 +152,7 @@ li{
     padding: 5px 0;
 }
 
-.float-first-page2{
+.float-first-part2{
     padding: 15px;
 }
 
@@ -152,4 +162,134 @@ li{
 
 .check-blue{
     color: blue;
+}
+
+.horizontal-float{
+    width: calc(100% - 30px);
+    border: 1px solid lightgrey;
+    margin: 15px auto;
+    /* padding: 15px; */
+}
+
+.hr-float-fl{
+    width: 80%;
+    padding: 20px;
+    line-height: 35px;
+}
+
+.hr-float-fr{
+    width: 20%;
+    /* padding: 10px; */
+}
+
+.blue-botton3{
+    color: white;
+    background-color: blue;
+    padding: 10px;
+    text-align: center;
+    margin: 20px;
+}
+
+
+
+/* SECOND PART */
+.container-second-part{
+    width: calc(100% - 30px);
+    height: 500px;
+    margin: 120px auto;
+    /* border: 1px solid black; */
+}
+
+.partner-float-fl{
+    width: 60%;
+    height: 500px;
+    /* border: 1px solid black; */
+    background-image: url(../img/partner.png);
+    background-size: cover;
+}
+
+.partner-float-fr{
+    width: 40%;
+    padding: 120px 65px;
+}
+
+.box-partner{
+    width: 150px;
+    padding: 10px;
+    text-align: center;
+    /* border: 1px solid black; */
+}
+
+
+
+
+/* THIRD PART */
+.container-third-part{
+    width: 100%;
+    height: 1000px;
+    margin: 0 auto;
+    /* border: 1px solid black; */
+}
+
+.title-third-part{
+    text-align: center;
+}
+
+.third-part-float{
+    width: calc(100% / 3);
+    height: 500px;
+    padding: 15px;
+    /* border: 1px solid black; */
+}
+
+
+
+/* IMG FLOAT */
+
+.img1-third-part-float{
+    width: 100%;
+    height: 300px;
+    background-image: url(../img/business-feature-switching-tools.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.img2-third-part-float{
+    width: 100%;
+    height: 300px;
+    background-image: url(../img/business-feature-coordinate-it.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.img3-third-part-float{
+    width: 100%;
+    height: 300px;
+    background-image: url(../img/business-feature-multi-device.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.img4-third-part-float{
+    width: 100%;
+    height: 300px;
+    background-image: url(../img/business-feature-integrations-it.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.img5-third-part-float{
+    width: 100%;
+    height: 300px;
+    background-image: url(../img/business-feature-send-files-it.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.img6-third-part-float{
+    width: 100%;
+    height: 300px;
+    background-image: url(../img/business-feature-security.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
