--- a/css/style.css
+++ b/css/style.css
@@ -293,3 +293,12 @@ li{
     background-size: contain;
     background-repeat: no-repeat;
 }
+
+
+
+
+/* FOURTH PART */
+.container-fourth-part{
+    width: 40%;
+    margin-top: 120px;
+}
