--- a/css/style.css
+++ b/css/style.css
@@ -302,3 +302,23 @@ li{
     width: 40%;
     margin-top: 120px;
 }
+
+
+
+/* FIFTH PART */
+.container-fifth-part{
+    width: 100%;
+    /* height: 600px; */
+    border: 1px solid black;
+}
+
+.container-float-fifth-part{
+    /* height: calc((100% / 3) * 2); */
+    border: 1px solid black;
+}
+
+[class^="float-fifth-part"{
+    width: calc(100% / 3);
+    border: 1px solid black;
+    background-color: red;
+}
