--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 /* CLASS UTILITY */
-.clearfix{
+.clearfix::after{
     content: "";
     display: table;
     clear: both;
@@ -24,7 +24,7 @@
 /* NAVBAR */
 .container-navbar{
     width: 100%;
-    text-align: center;
+    /* text-align: center; */
     /* line-height: ; */
     font-size: 20px;
     font-weight: bold;
@@ -39,6 +39,7 @@
 
 .navbar-fr{
     width: 50%;
+    text-align: right;
 }
 
 .logo{
@@ -308,17 +309,222 @@ li{
 /* FIFTH PART */
 .container-fifth-part{
     width: 100%;
+    margin-top: 100px;
     /* height: 600px; */
     border: 1px solid black;
 }
 
-.container-float-fifth-part{
-    /* height: calc((100% / 3) * 2); */
+[class^="float-fifth-part"]{
+    width: calc(100% / 3);
+    height: 460px;
+    position: relative;
+    /* border: 1px solid black; */
+}
+
+[class^="underfloat-fifth-part"]{
+    width: 50%;
+    height: 230px;
     border: 1px solid black;
 }
 
-[class^="float-fifth-part"{
-    width: calc(100% / 3);
+.underfloat-fifth-part1{
+    width: 50%;
+    height: 230px;
+    background-color: #a2d39b;
+    background-image: url(../img/designit.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;  
+    background-position: center;  
     border: 1px solid black;
-    background-color: red;
 }
+
+.underfloat-fifth-part2{
+    width: 50%;
+    height: 230px;
+    background-color: #61082b;
+    background-image: url(../img/arizona_state_university.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;  
+    border: 1px solid black;
+}
+
+.underfloat-fifth-part3{
+    width: 50%;
+    height: 230px;
+    background-color: #0093ce;
+    background-image: url(../img/university_of_florida.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;  
+    border: 1px solid black;
+}
+
+.underfloat-fifth-part4{
+    width: 50%;
+    height: 230px;
+    background-color: #ff1c1c;
+    background-image: url(../img/topps.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;  
+    border: 1px solid black;
+}
+
+.float-fifth-part55{
+    width: calc(100% / 3)%;
+    height: 460px;
+    background-color: #f5f5f5;
+    background-image: url(../img/clear_channel.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: 20px 20px;  
+    /* border: 1px solid black; */
+}
+
+.text-part55{
+    padding: 200px 25px;
+    /* font-size: 15px; */
+    /* line-height: 20px; */
+}
+
+.hr-part55{
+    /* color: black; */
+    padding-top: 200px;
+    font-size: 10px solid black;
+}
+
+
+.underfloat-fifth-part5{
+    width: 50%;
+    height: 230px;
+    background-color: #d5001f;
+    background-image: url(../img/world_bicycle_relief.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;  
+    border: 1px solid black;
+}
+
+.underfloat-fifth-part6{
+    width: 50%;
+    height: 230px;
+    background-color: #b4d0e7;
+    background-image: url(../img/hearst_corp.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;  
+    border: 1px solid black;
+}
+
+.underfloat-fifth-part7{
+    width: 50%;
+    height: 230px;
+    background-color: #0d2481;
+    background-image: url(../img/lonely_planet.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;  
+    border: 1px solid black;
+}
+
+.underfloat-fifth-part8{
+    width: 50%;
+    height: 230px;
+    background-color: #ffd830;
+    background-image: url(../img/clear_channel.svg);
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;  
+    border: 1px solid black;
+}
+
+
+
+
+.box-underfloats{
+    width: 100%;
+    height: 230px;
+    background-color: #b4d0e7;
+    border: 1px solid black;
+}
+
+.underbox-underfloats{
+    width: 1200px;
+    text-align: center;
+    margin: auto;
+}
+
+.hr-float-fifth-part1{
+    width: 60%;
+    font-size: 40px;
+    font-weight: bold;
+    color: #61082b;
+    line-height: 230px;
+}
+
+.hr-float-fifth-part2{
+    width: 40%;
+    /* height: 50%; */
+    margin-top: 100px;
+    padding: 10px;
+    color: white;
+    background-color: blue;
+    background-size: contain;
+}
+
+
+
+/* SIXTH PART */
+.container-sixth-part{
+    width: 1200px;
+    margin: 100px auto;
+}
+
+.float-sixth-part{
+    padding: 20px;
+}
+
+
+
+/* FOOTER */
+.container-footer{
+    height: 600px;
+    background-color: hsl(206deg 9% 15%);
+}
+
+
+.float-footer{
+    max-width: 1200px;
+    color: white;
+    margin: auto;
+    border-bottom: 1px solid hsl(227deg 56% 64%);
+    padding-bottom: 20px;
+
+}
+
+.footer-big-text{
+    font-size: 30px;
+    font-weight: bold;
+    color: hsl(227deg 56% 64%);
+    padding: 50px 0 10px 0;
+}
+
+.italiano{
+    display: inline-block;
+}
+
+.flag{
+    width: 40px;
+}
+
+li{
+    list-style: none;
+    padding: 8px 0;
+}
+
+.fl-footer{
+    width: calc(100%/6);
+}
+
+
